--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "FM",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "chance": "^1.0.16"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
