--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "awesome gnome simulator",
   "main": "gnome_sim.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha --reporter spec ./app/"
+    "test": "node_modules/mocha/bin/mocha --reporter spec ./app/",
+    "coverage": "node_modules/nyc/bin/nyc.js node_modules/mocha/bin/mocha --reporter spec ./app/"
   },
   "author": "FM",
   "license": "ISC",
   "dependencies": {
-    "chance": "^1.0.16"
+    "chance": "^1.0.16",
+    "nyc": "^13.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
