--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
     "no-trailing-spaces": 2,
     "no-unused-vars": 1,
     "no-use-before-define": [2, "nofunc"],
-    "object-curly-spacing": [2, "never"],
+    "object-curly-spacing": [2, "always"],
     "quotes": [2, "single", {"allowTemplateLiterals": true}],
     "semi": [2, "always"],
     "keyword-spacing": [2, {
