--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^5.6.0",
+    "eslint-plugin-jsdoc": "^3.8.0",
     "mocha": "^5.2.0"
   }
 }
