--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gnome_sim.js",
   "scripts": {
     "test": "node_modules/mocha/bin/mocha --reporter spec ./app/",
-    "coverage": "node_modules/nyc/bin/nyc.js node_modules/mocha/bin/mocha --reporter spec ./app/"
+    "coverage": "node_modules/nyc/bin/nyc.js node_modules/mocha/bin/mocha --reporter spec ./app/",
+    "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "author": "FM",
   "license": "ISC",
