--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "FM",
   "license": "ISC",
   "dependencies": {
-    "chance": "^1.0.16",
-    "nyc": "^13.0.1"
+    "chance": "^1.0.16"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^5.6.0",
     "eslint-plugin-jsdoc": "^3.8.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1"
   }
 }
