--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "scripts": {
     "test": "node_modules/mocha/bin/mocha --reporter spec ./app/",
     "coverage": "node_modules/nyc/bin/nyc.js node_modules/mocha/bin/mocha --reporter spec ./app/",
-    "lint": "node_modules/eslint/bin/eslint.js ."
+    "lint": "node_modules/eslint/bin/eslint.js .",
+    "watch": "webpack --watch",
+    "build": "node_modules/webpack/bin/webpack.js"
   },
   "author": "FM",
   "license": "ISC",
   "dependencies": {
-    "chance": "^1.0.16"
+    "chance": "^1.0.16",
+    "webpack": "^4.19.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "babel-loader": "^8.0.0-beta.0",
     "chai": "^4.1.2",
     "eslint": "^5.6.0",
     "eslint-plugin-jsdoc": "^3.8.0",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1"
+    "nyc": "^13.0.1",
+    "webpack-cli": "^3.1.0"
   }
 }
