--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "FM",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "chance": "^1.0.16",
+    "express": "^4.16.3",
+    "node-fetch": "^2.2.0",
     "webpack": "^4.19.1"
   },
   "devDependencies": {
