--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "FM",
   "license": "ISC",
   "dependencies": {
+    "behaviortree": "^2.0.4",
     "chance": "^1.0.16",
-    "webpack": "^4.19.1"
+    "webpack": "^5.21.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.36",
@@ -23,10 +24,10 @@
     "chai": "^4.1.2",
     "eslint": "^5.6.0",
     "eslint-plugin-jsdoc": "^3.8.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.0.1",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "raw-loader": "^0.5.1",
     "sinon": "^6.3.4",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^4.5.0"
   }
 }
